Bug 143911 - FILESAVE DOCX Change tracked character formatting should be saved
Summary: FILESAVE DOCX Change tracked character formatting should be saved
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords: filter:docx
Depends on:
Blocks: Track-Changes-TextFormatting
  Show dependency treegraph
 
Reported: 2021-08-17 08:01 UTC by NISZ LibreOffice Team
Modified: 2021-09-02 12:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
attachment 152521 saved by current Writer (13.06 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-08-17 08:01 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Writer (40.50 KB, image/png)
2021-08-17 08:02 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Writer after rejecting the tracked change (40.05 KB, image/png)
2021-08-17 08:03 UTC, NISZ LibreOffice Team
Details
Screenshot of the exported document side by side in Word and Writer (65.76 KB, image/png)
2021-08-17 08:03 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-08-17 08:01:30 UTC
Created attachment 174333 [details]
attachment 152521 [details] saved by current Writer

This is a followup to bug 126206 and bug 50447 
Now that character formatting started to be change tracked and imported from docx, it would be nice to be able to save recorded character formatting changes to DOCX.

Steps to reproduce:
    1. Open attachment 152521 [details] which contains a tracked removal of bold character formatting. This is imported fine and rejecting the change would restore the bold formatting of the word “ipsum”.
    2. Save the file as DOCX unchanged, reopen
    3. Reject the change.

Actual results:
The word “ipsum” reverts to unformatted.
When opened in Word, there are no tracked changes.

Expected results:
The word “ipsum” should be bold formatted.
When opened in Word, the tracked change of bold removal should be visible just like in the original attachment 152521 [details].

LibreOffice details:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: dd3ab0fd737ff84657ff34eebafe2628f489e5a1
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-08-17 08:02:06 UTC
Created attachment 174334 [details]
Screenshot of the original and exported document side by side in Writer
Comment 2 NISZ LibreOffice Team 2021-08-17 08:03:13 UTC
Created attachment 174335 [details]
Screenshot of the original and exported document side by side in Writer after rejecting the tracked change
Comment 3 NISZ LibreOffice Team 2021-08-17 08:03:32 UTC
Created attachment 174336 [details]
Screenshot of the exported document side by side in Word and Writer
Comment 4 Commit Notification 2021-08-17 14:37:58 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/15f340f35cd9dc635d0507ca7de9d11227ae9922

tdf#143911 DOCX: export character formatting changes

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2021-09-02 12:52:37 UTC
Verified in: 

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d5ade739771ddf06cc7ee6d4af15672bfcf09ed6
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded