tdf#143911 DOCX: export character formatting changes

of text portions (instead of losing them completely,
resulting missing rejection of tracked formatting changes
later).

Follow-up to commit 0115a77eb84afb0d820d8e23f45e49b30b82a8d3
"tdf#50447 sw: track changes of character formatting" and
commit 5322663f8234836a6a4aaaed025c158fd7e8b67a%5E%21
"tdf#126206 DOCX: add rejection of character formatting changes".

Change-Id: I7f00774875fe06d21865d9468fc1a63bd11d91ee